//Lenh de generate code:
/*
Cai package va tao thu muc

npm install ts-proto --save-dev
chmod +x ./node_modules/.bin/protoc-gen-ts_proto
mkdir -p src/generated/

npx protoc \
  --plugin=protoc-gen-ts_proto=./node_modules/.bin/protoc-gen-ts_proto \
  --ts_proto_out=./src/generated \
  --ts_proto_opt=nestJs=true,outputServices=grpc-js \
  --proto_path=./proto \
  --experimental_allow_proto3_optional \
  ./proto/notification.proto


*/

syntax = "proto3";

package notification;

service NotificationService {
    rpc GetNotifications (GetNotificationsRequest) returns (GetNotificationsResponse) {};
    rpc CreateNotification (CreateNotificationRequest) returns (CreateNotificationResponse) {};
}

message Notification {
    string id = 1;
    string postId = 2;
    string userId = 3;
    NotificationType notifType = 4;
    string createdAt = 5;
    string deletedAt = 7;
}

message GetNotificationsRequest {
    string userId = 1;
}

message GetNotificationsResponse {
    repeated Notification notifications = 1;
}

message CreateNotificationRequest {
    string postId = 1;
    string userId = 2;
    NotificationType notifType = 3;
}

message CreateNotificationResponse {
    Notification notifications = 1;
}

enum NotificationType {
    NOTIFICATION_TYPE_UNSPECIFIED = 0;
    LIKE = 1;
    COMMENT = 2;
    SHARE = 3;
}